- AGGIORNATO IL FITER E IL POM  - FUNZIONAMENTO CORRETTO TRANNE APIGATEWAY